Break repo title to new line to avoid horizontal scrolling with long titles

--- a/src/components/Repo.scss
+++ b/src/components/Repo.scss
@@ -14,6 +14,7 @@
 
     h2 {
         margin: 0;
+        word-break: break-all;
     }
 }
 
